--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Luciano-Holz/desafio_estagio#readme",
   "dependencies": {
-    "consign": "^0.1.6",
-    "express": "4.17.1"
+    "consign": "0.1.6",
+    "express": "4.17.1",
+    "mysql": "2.18.1",
+    "mysql2": "2.3.0"
   },
   "devDependencies": {
     "nodemon": "2.0.13"
